modify login process